--- a/BanquetCoupons/Properties/Resources.resx
+++ b/BanquetCoupons/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="Banquet Coupon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Banquet Coupon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="2221" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2221.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="marque" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\marque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -151,7 +154,7 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2221" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2221.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="2222" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2222.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
