--- a/BanquetCoupons/Properties/Resources.resx
+++ b/BanquetCoupons/Properties/Resources.resx
@@ -118,35 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="hotelLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hotelLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Asia-Hotel-Logo11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Asia-Hotel-Logo11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="userWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\userWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="2222" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2222.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1111" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1111.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hotelLogo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hotelLogo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="222" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\222.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Banquet Coupon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Banquet Coupon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="2221" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2221.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="marque" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\marque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="485137362_1078058621033379_2208115647579356284_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\485137362_1078058621033379_2208115647579356284_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,7 +136,28 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2222" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2222.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hotelLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hotelLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="485137362_1078058621033379_2208115647579356284_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\485137362_1078058621033379_2208115647579356284_n.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Banquet Coupon (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Banquet Coupon (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="userWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\userWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2221" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2221.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Asia-Hotel-Logo11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Asia-Hotel-Logo11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hotelLogo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hotelLogo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="marque1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\marque1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
